Table alignment issue resolved

--- a/src/app/modules/invoices/components/invoice-payment-details/invoice-payment-details.component.scss
+++ b/src/app/modules/invoices/components/invoice-payment-details/invoice-payment-details.component.scss
@@ -65,13 +65,19 @@
       }
 
       .ag-root-wrapper-body {
-        height: auto !important;
+        height: 100% !important;
       }
 
       .ag-header-cell-text {
         text-overflow: initial !important;
         white-space: normal !important;
       }
+      .ag-layout-auto-height
+        {
+          height: calc(100vh - 270px) !important;
+          overflow: auto;
+        }
+     
     }
   }
 
